# filesfinder

./: .bumpversion.cfg  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh  list_versions.py  text.txt
.github/workflows/: CI.yml  audit_check.yml  check_action.yml  dockertest.yml  languagetool.yml  publish.yml  release.yml  release_docker.yml  rustbin.yml  rustlints.yml
docker-image/: Dockerfile
src/: bin.rs
tests/: correct_suffix.rs  same_as_find.rs
tests/common/: mod.rs
