[package]
name = "filesfinder"
version = "0.3.2"
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
edition = "2021"
description = "Find files within current directory that match given patterns, while respecting gitignore rules."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeertmans/filesfinder"
keywords = ["find", "files", "gitignore"]
include = ["src/bin.rs", "LICENSE.md", "README.md", "CHANGELOG.md"]
rust-version = "1.58.1"

[[bin]]
name = "ff"
path = "src/bin.rs"

[dependencies]
ignore = "0.4"
crossbeam-channel = "0.5"
regex = "1"
globset = "0.4"

[[test]]
name = "same_as_find"
path = "tests/same_as_find.rs"
