[[bin]]
name = "ff"
path = "src/bin.rs"

[dependencies]
crossbeam-channel = "0.5"
globset = "0.4"
ignore = "0.4"
num_cpus = "1.15.0"
regex = "1"

[package]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
description = "Find files within current directory that match given patterns, while respecting gitignore rules."
edition = "2021"
include = ["src/bin.rs", "LICENSE.md", "README.md", "CHANGELOG.md"]
keywords = ["find", "files", "gitignore"]
license = "MIT"
name = "filesfinder"
readme = "README.md"
repository = "https://github.com/jeertmans/filesfinder"
rust-version = "1.63.0"
version = "0.4.0"

[[test]]
name = "same_as_find"
path = "tests/same_as_find.rs"
