[[bin]]
name = "ff"
path = "src/bin.rs"

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.2", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "4.5.0"
color-print = "0.3.6"
crossbeam-channel = "0.5.12"
globset = "0.4.14"
ignore = "0.4.22"
num_cpus = "1.16.0"
regex = "1.10.3"

[package]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
description = "Find files within current directory that match given patterns, while respecting gitignore rules."
edition = "2021"
include = ["src/bin.rs", "LICENSE.md", "README.md", "CHANGELOG.md"]
keywords = ["find", "files", "gitignore"]
name = "filesfinder"
readme = "README.md"
repository = "https://github.com/jeertmans/filesfinder"
rust-version = "1.74.0"
version = "0.5.1"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[[test]]
name = "correct_suffix"
path = "tests/correct_suffix.rs"

[[test]]
name = "same_as_find"
path = "tests/same_as_find.rs"
